Add List/Total endpoints for Subscriptions
